--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "bianchimro@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.24.1",
+    "bower": "^1.8.2",
     "css-loader": "^0.25.0",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
@@ -25,6 +29,7 @@
     "ng-annotate-loader": "^0.1.1",
     "phantomjs": "^1.9.18",
     "raw-loader": "^0.5.1",
+    "webpack": "^4.2.0",
     "webpack-stream": "^3.2.0"
   }
 }
